fix(modal): dialog overflow hidden

--- a/src/components/reusable/modal/modal.scss
+++ b/src/components/reusable/modal/modal.scss
@@ -16,6 +16,7 @@ dialog {
   min-width: 288px;
   max-width: calc(100% - 32px);
   max-height: calc(100% - 32px);
+  overflow: hidden;
 
   &[open] {
     display: flex;
